--- a/camera_raw_appendix_2.ipynb
+++ b/camera_raw_appendix_2.ipynb
@@ -51,7 +51,7 @@
         "\n",
         "今回紹介する内容について前提とする環境は以下のとおりです。\n",
         "\n",
-        "- 画像キャプチャーサイド\n",
+        "- RAW画像撮影に必用な器具\n",
         "    - ラズベリーパイ・モデル３B\n",
         "    - Raspbian 9.3のインストールされたSDCARD\n",
         "    - ラズベリーパイカメラv2.1\n",
