--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "またすべての処理はGoogle Colab上で行うことができ、読者の皆さんはパワフルなPCや特殊なソフトウェアを用意せずとも、ブラウザ上で全ての処理を試してみることができます。\n",
     "\n",
-    "今回使用したコードにはこちらの次ページからアクセスすることができます。\n",
+    "今回使用したコードにはこちらの目次ページからアクセスすることができます。\n",
     "\n",
     "[http://bit.ly/raw_toc](http://bit.ly/raw_toc)"
    ]
@@ -121,11 +121,12 @@
     "この本の内容を再現するには以下の環境等が必用です。\n",
     "\n",
     "- Google Colabにアクセスできるブラウザ\n",
-    " - 多くのブラウザが対応できると思われます。なお、本書の内容はChromeによって確かめられています。\n",
     "\n",
     "- ColabにアクセスできるGoogleアカウント\n",
     "\n",
-    "なおColab上で使用したPythonのバージョンは3.6です。"
+    "ブラウザに関しては現在広く使われている物ならほとんどが対応していると思われます。本書の内容はChromeによって確かめられています。\n",
+    "\n",
+    "なお、Colab上で使用したPythonのバージョンは3.6です。"
    ]
   },
   {
@@ -137,7 +138,9 @@
    "source": [
     "### Colabについて\n",
     "\n",
-    "Google Colab (グーグル・コラボ)とはGoogleが提供するサービスの一つで、ブラウザ上で実行可能なPythonのインタラクティブ環境です。Google Colabを利用することにより、Pythonの環境を無料でブラウザ上で利用することができます。詳しくは[Google自身によるColabの解説](https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja)をご覧ください。"
+    "Google Colab (グーグル・コラボ)とはGoogleが提供するサービスの一つで、ブラウザ上で実行可能なPythonのインタラクティブ環境です。Google Colabを利用することにより、Pythonの環境を無料でブラウザ上で利用することができます。詳しくは[Google自身によるColabの解説](https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja)をご覧ください。\n",
+    "\n",
+    "[https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja](https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja)"
    ]
   },
   {
