--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "\n",
-    "# PythonとColabで作る - RAW画像処理入門\n",
+    "# PythonとColabでできる- ゼロから作るRAW現像\n",
     "\n",
     "\n",
     "## 目次\n",
