Text is updated.

--- a/camera_raw_chapter_3.ipynb
+++ b/camera_raw_chapter_3.ipynb
@@ -46,9 +46,9 @@
       "source": [
         "この節ではまずRAW画像を準備し、簡易的なデモザイクを行ってみます。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "この章の内容の詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_3](http://bit.ly/raw_chap_3)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -312,7 +312,7 @@
       "source": [
         "print(raw.sizes)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +417,7 @@
         "h, w = raw_array.shape\n",
         "print(h, w)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +494,7 @@
         "# 実際に表示します。\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -598,7 +598,7 @@
         "plt.title(u\"RAW画像の拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -642,7 +642,7 @@
       "source": [
         "print(raw.raw_pattern)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,7 +750,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたもの\")\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -796,7 +796,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたものを拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -867,7 +867,7 @@
         "# 表示して確認\n",
         "print(pattern)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -953,7 +953,7 @@
         "plt.title(u\"簡易デモザイク\")\n",
         "plt.show()"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1069,7 +1069,7 @@
         "plt.title(u\"simple_demosaic関数の出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1156,7 +1156,7 @@
         "wb = raw.camera_whitebalance\n",
         "print(wb)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1240,7 +1240,7 @@
         "plt.title(u\"ホワイトバランス後の画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1377,7 +1377,7 @@
         "plt.title(u\"white_balance関数を使った出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1450,7 +1450,7 @@
         "blc = raw.black_level_per_channel\n",
         "print(blc)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1524,7 +1524,7 @@
         "print(\"ブラックレベル補正前: 最小値=\", blc_raw.min(), \n",
         "      \", 最大値=\", blc_raw.max())"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1609,7 +1609,7 @@
         "plt.title(u\"ブラックレベル補正後の画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1730,7 +1730,7 @@
         "plt.title(u\"black_level_correction関数を使った出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1804,7 +1804,7 @@
         "plt.ylabel(\"出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1858,7 +1858,7 @@
         "plt.ylabel(\"出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1942,7 +1942,7 @@
         "plt.title(u\"ガンマ補正前\")\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2016,7 +2016,7 @@
         "plt.title(u\"ガンマ補正後\")\n",
         "plt.show()"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2118,11 +2118,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "RAUDnz95WRy9",
+        "outputId": "372c5510-0054-4cc1-d96f-5da0f9c1e47f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 395
-        },
-        "outputId": "372c5510-0054-4cc1-d96f-5da0f9c1e47f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2130,7 +2130,7 @@
         "\n",
         "import raw_process"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2222,7 +2222,7 @@
         "plt.title(u\"モジュールを使った処理の結果\")\n",
         "plt.show()"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
