Text is updated.

--- a/camera_raw_chapter_4_2.ipynb
+++ b/camera_raw_chapter_4_2.ipynb
@@ -35,9 +35,10 @@
         "\n",
         "この節では、画像サイズを変えないデモザイク処理を解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "このページ内の解説は簡略版です。\n",
+        "詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_4_2](http://bit.ly/raw_chap_4_2)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -220,7 +221,7 @@
         "plt.title(u\"簡易デモザイクを使ったRAW現像結果\")\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -261,7 +262,7 @@
         "print(\"現像後のサイズ = \", gmm_img.shape)\n",
         "print(\"RAWデータのサイズ = \", raw_array.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +362,7 @@
         "plt.title(u\"簡易RAW現像結果（左）とJPEG画像(右)\")\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -428,7 +429,7 @@
         "# 実際に表示。\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -467,15 +468,6 @@
         "### 線形補完法\n",
         "\n",
         "デモザイクアルゴリズムの中で、縮小する方法の次に簡単なのは、線形補間法です。\n",
-        "線形補間というとものものしいですが、ようするに、距離に応じて間の値をとるわけです。たとえば、緑の画素ならこうなります。\n",
-        "\n",
-        "![緑画像の線形補間](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig_4_2_1.png \"緑画像の線形補間\")\n",
-        "\n",
-        "赤の画素ではこうです。\n",
-        "\n",
-        "![赤画像の線形補間](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig_4_2_2.png \"赤画像の線形補間\")\n",
-        "\n",
-        "青の画素でも、赤の場合と同じような補完を行います。\n",
         "\n",
         "では実際やってみましょう。"
       ]
@@ -554,7 +546,7 @@
       "source": [
         "print(dms_img.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,7 +612,7 @@
         "plt.title(u\"線形補間デモザイク画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -680,7 +672,7 @@
         "# 実際に表示。\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -815,44 +807,6 @@
         "\n",
         "上記の場合は、入力画素の周辺3x3画素を取り出し、その一つ一つの画素とフィルターの値を掛け合わした上で合計し出力するという処理をしています。\n",
         "\n",
-        "例えばこのコードの場合、緑画素なら、$g_{in}$、$g_{out}$を緑画素の入力、出力とすると\n",
-        "\n",
-        "\\begin{equation}\n",
-        "f_{G} =  \\frac{1}{4}\n",
-        "\\begin{bmatrix}\n",
-        "    0 & 1 & 0 \\\\\n",
-        "    1 & 4 & 1 \\\\\n",
-        "    0 & 1 & 0\n",
-        "    \\end{bmatrix}\n",
-        "\\end{equation}\n",
-        "\n",
-        "$$ g_{out} \\left( x, y \\right) = \\sum_{i=-1}^{+1}\\sum_{j=-1}^{+1} g_{in} \\left( x+i, y+i \\right) f_{G} \\left( i, j \\right) $$\n",
-        "\n",
-        "という処理を行います。これで入力画素が緑画素の場合上下左右には緑画素がないので入力画素がそのまま出力されますし、そうでない場合は上下左右の緑画素の平均値が出力されます。\n",
-        "\n",
-        "同様に赤画素なら、$r_{in}$、$r_{out}$を赤画素の入力、出力とすると\n",
-        "\n",
-        "\\begin{equation}\n",
-        "f_r =  \\frac{1}{4}\n",
-        "\\begin{bmatrix}\n",
-        "    1 & 2 & 1 \\\\\n",
-        "    2 & 4 & 2 \\\\\n",
-        "    1 & 4 & 2\n",
-        "    \\end{bmatrix}\n",
-        "\\end{equation}\n",
-        "\n",
-        "$$ r_{out} \\left( x, y \\right) = \\sum_{i=-1}^{+1}\\sum_{j=-1}^{+1} r_{in} \\left( x+i, y+i \\right) f_r \\left( i, j \\right) $$\n",
-        "\n",
-        "という処理を行います。これで\n",
-        "\n",
-        "- 入力画素が赤画素：赤の周辺には他の赤はないので入力画素をそのまま出力\n",
-        "- 入力画素の上下が赤：上下の平均を出力。（周辺には他に赤画素はない。）\n",
-        "- 入力画素の左右が赤：左右の平均を出力。（周辺には他に赤画素はない。）\n",
-        "- 入力がその斜め上・下が赤：斜め右上・左上・右下・左下の平均を出力\n",
-        "\n",
-        "という処理が行われます。青画素も同じように処理します。\n",
-        "\n",
-        "\n",
         "実行してみましょう。"
       ]
     },
@@ -860,11 +814,11 @@
       "metadata": {
         "id": "Br33aMktbcAi",
         "colab_type": "code",
+        "outputId": "a56533a2-b95d-4a6a-e00d-3b13b8c945c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
-        },
-        "outputId": "a56533a2-b95d-4a6a-e00d-3b13b8c945c1"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -881,7 +835,7 @@
         "plt.title(u\"モジュールを使ったデモザイク\")\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
