Text is updated.

--- a/camera_raw_chapter_4_3.ipynb
+++ b/camera_raw_chapter_4_3.ipynb
@@ -35,9 +35,10 @@
         "\n",
         "この節では、欠陥画素補正を解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "このページ内の解説は簡略版です。\n",
+        "詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_4_3](http://bit.ly/raw_chap_4_3)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -186,7 +187,7 @@
         "plt.title(u\"欠陥画素\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -221,22 +222,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "これはいわゆる欠陥画素です。 「欠陥」という名前がついていますが、製品の欠陥ではなく、一部の画素が正常な値を出力しない状態です。 多くの場合このように、常に明るく見えますが（ホットピクセル）、常に暗い（デッドピクセルまたはコールドピクセル）こともあれば、本来の信号とずれた値を示すという捕まえにくいケースもあります。\n",
-        "\n",
-        "数ミリ角のサイズに数百万から数千万の画素を作り込む現代の画像センサーでは、一部にこのような欠陥画素が含まれていることはごく普通のことです。\n",
-        "\n",
-        "なぜこのような欠陥ができるかというのには、さまざまな原因が考えられます。 たとえば製造過程でパーティクルが入り1特定の画素が反応しなくなったとか逆にショートして常に電流が流れるようになった、というのがまっさきに思いつきます。 まだ半導体中の結晶欠陥などのせいで基板側に電流が漏れている（または基板から漏れて入ってくる）のかもしれません。 さらには宇宙線などが当たって製造後に欠陥が形成されるケースもあると聞きます。\n",
-        "\n",
-        "このように、画像センサーに欠陥画素はつきもので、画像処理である程度対応していく必用があります。 市販のスマートフォンのカメラはもちろん、一眼レフカメラなどでも欠陥画素補正処理は内部的に行われているはずです。\n",
-        "\n",
-        "それでは、実際に簡単な補正処理を行ってみます。\n",
-        "\n",
-        "欠陥画素補正には大きく分けて２つのステップがあります2。\n",
-        "\n",
-        "- 欠陥画素検出\n",
-        "- 欠陥画素修正\n",
-        "\n",
-        "今回は、欠陥画素検出としては、周辺の画素の最大値よりある程度以上大きいか最小値よりある程度以上小さければ欠陥とみなす、という方針で行います。 また修正としては、欠陥画素の上下左右４画素の平均をとる事にします。"
+        "これはいわゆる欠陥画素です。 "
       ]
     },
     {
@@ -496,7 +482,7 @@
         "plt.title(u\"欠陥画素補正後\")\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -541,7 +527,7 @@
         "plt.title(u\"補正された欠陥画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -655,11 +641,11 @@
       "metadata": {
         "id": "wHT39Oqzcq_P",
         "colab_type": "code",
+        "outputId": "1af32b77-6b50-4603-e88d-a04888be049f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        },
-        "outputId": "1af32b77-6b50-4603-e88d-a04888be049f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -678,7 +664,7 @@
         "plt.title(u\"モジュールを使った欠陥画素補正\")\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -711,20 +697,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "この`defect_correction()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
-        "使用する場合は、\n",
-        "\n",
-        "```\n",
-        "! wget http://bit.ly/raw_process -O raw_process.py\n",
-        "```\n",
-        "\n",
-        "としてダウンロードした後、\n",
-        "\n",
-        "```\n",
-        "from raw_process import defect_correction\n",
-        "```\n",
-        "\n",
-        "としてインポートしてください。"
+        "この`defect_correction()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。"
       ]
     },
     {
