--- a/camera_raw_chapter_4_2.ipynb
+++ b/camera_raw_chapter_4_2.ipynb
@@ -860,20 +860,7 @@
       "source": [
         "同じ結果が得られました。\n",
         "\n",
-        "この`demosaic()`関数はraw\\_process.pyモジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
-        "使用する場合は、\n",
-        "\n",
-        "```\n",
-        "! wget http://bit.ly/raw_process -O raw_process.py\n",
-        "```\n",
-        "\n",
-        "としてダウンロードした後、\n",
-        "\n",
-        "```\n",
-        "from raw_process import demosaic\n",
-        "```\n",
-        "\n",
-        "としてインポートしてください。"
+        "この`demosaic()`関数はraw\\_process.pyモジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。"
       ]
     },
     {
