--- a/camera_raw_chapter_4_4.ipynb
+++ b/camera_raw_chapter_4_4.ipynb
@@ -35,9 +35,10 @@
         "\n",
         "この節では、カラーマトリクス補正を解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "このページ内の解説は簡略版です。\n",
+        "詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_4\\_4](http://bit.ly/raw_chap_4_4)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -157,7 +158,7 @@
         "plt.title(u\"JPEG画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -217,7 +218,7 @@
         "plt.title(u\"RAW現像した画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -240,39 +241,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "２つの画像を見比べると、色の鮮やかさが違うことがわかると思います。また色合いも完全には一致していません。実際の見た目の印象も最初のJPEGの画像に近いものでした。\n",
-        "\n",
-        "どうしてこうなってしまうかというと、最大の原因はカメラのセンサーの色ごとの感度が人間の目とは完全には一致しないことです。例えば人間の目はある光の周波数の範囲を赤、青、緑、と感じるのですが、センサーが緑を検知する範囲は人間が緑と感じる領域とは微妙に異なっています。同じように青や赤の範囲も違います。これは、センサーが光をなるべく沢山取り込むため、だとか、製造上の制限、などの理由があるようです。 さらに、人間の目には、ある色を抑制するような領域まであります。これはセンサーで言えばマイナスの感度があるようなものですが、そんなセンサーは作れません。\n",
-        "\n",
-        "こういったセンサー感度と人間の目の間隔とがなるべく小さくなるように、3色を混ぜて、より人間の感覚に近い色を作り出す必要があります。この処理を通常は行列を使って行い、これをカラーマトリクス補正と呼びます。\n",
-        "\n",
-        "カラーマトリクス補正というのは処理的には3x3の行列に、3色の値を成分としたベクトルをかけるという処理になります。\n",
-        "\n",
-        "$$ \n",
-        "\\left(\n",
-        "    \\begin{matrix}\n",
-        "        R_{out} \\\\\n",
-        "        G_{out} \\\\\n",
-        "        B_{out} \\\\\n",
-        "    \\end{matrix}\n",
-        "\\right) = \n",
-        "\\left(\n",
-        "    \\begin{matrix}\n",
-        "        c_0 & c_1 & c_2 \\\\\n",
-        "        c_3 & c_4 & c_5 \\\\\n",
-        "        c_6 & c_7 & c_8 \\\\\n",
-        "    \\end{matrix}\n",
-        "\\right)\n",
-        "\\left(\n",
-        "    \\begin{matrix}\n",
-        "        R_{in} \\\\\n",
-        "        G_{in} \\\\\n",
-        "        B_{in} \\\\\n",
-        "    \\end{matrix}\n",
-        "\\right)\n",
-        "$$\n",
-        "\n",
-        "このような処理で、色の深み・鮮やかさ（Saturationと呼ばれます）、色合い（Hueと呼ばれます）をある程度修正することができます。"
+        "２つの画像を見比べると、色の鮮やかさが違うことがわかると思います。また色合いも完全には一致していません。実際の見た目の印象も最初のJPEGの画像に近いものでした。"
       ]
     },
     {
@@ -312,7 +281,7 @@
       "source": [
         "print(raw.color_matrix)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +320,7 @@
       "source": [
         "! apt install exiftool"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +364,7 @@
       "source": [
         "! exiftool -EXIF:MakerNoteUnknownText -b chart.jpg -b"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +493,7 @@
         "# 画像を描画\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -617,11 +586,11 @@
       "metadata": {
         "id": "tGSSg8mcegu2",
         "colab_type": "code",
+        "outputId": "47eb5cff-5597-4f4a-a462-dd03aea1e39d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
-        },
-        "outputId": "47eb5cff-5597-4f4a-a462-dd03aea1e39d"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -640,7 +609,7 @@
         "plt.title(u\"モジュールを使ったカラー補正\")\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -663,20 +632,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "この`color_correction_matrix()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
-        "使用する場合は、\n",
-        "\n",
-        "```\n",
-        "! wget http://bit.ly/raw_process -O raw_process.py\n",
-        "```\n",
-        "\n",
-        "としてダウンロードした後、\n",
-        "\n",
-        "```\n",
-        "from raw_process import color_correction_matrix\n",
-        "```\n",
-        "\n",
-        "としてインポートしてください。"
+        "この`color_correction_matrix()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。"
       ]
     },
     {
