--- a/camera_raw_chapter_5_3.ipynb
+++ b/camera_raw_chapter_5_3.ipynb
@@ -35,9 +35,9 @@
         "\n",
         "この節ではエッジ強調について解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "このページ内の解説は簡略版です。 詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_5\\_3](http://bit.ly/raw_chap_5_3)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -181,7 +181,7 @@
         "plt.title(u\"前回までの画像、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -207,44 +207,6 @@
         "どことなくぼやっとしていて、コントラストも少し低いようです。\n",
         "\n",
         "エッジ強調を使って改善してみましょう。\n",
-        "\n",
-        "今回エッジ強調に使うのはアナログの時代から使われてきたアンシャープマスキングという手法です。\n",
-        "これは、入力画像をぼやけさせた画像をまず作り、そのぼやけさせた画像を元の画素から引いてやることで行います。\n",
-        "ぼやけさせた画像は入力画像より暗くしておく必用があります。\n",
-        "\n",
-        "式で表すとこのようになります。入力画像$g \\left( x, y \\right)$に対し、ぼやけさせた画像を$f \\left( x, y \\right)$とすると、出力画像は\n",
-        "\n",
-        "$$\n",
-        "h \\left( x, y \\right) = g \\left( x, y \\right) - a f \\left( x, y \\right)\n",
-        "$$\n",
-        "\n",
-        "となります。このままでは暗くなってしまうので、明るさを調整すると、こうなります。\n",
-        "\n",
-        "$$\n",
-        "h \\left( x, y \\right) = g \\left( x, y \\right) + a \\left( g \\left( x, y \\right) -  f \\left( x, y \\right) \\right)\n",
-        "$$\n",
-        "\n",
-        "後半の部分はハイパスフィルターになっており、結局元の画像に高周波成分を足し合わせるのと同じ処理になっていることがわかります。\n",
-        "\n",
-        "では実際に処理してみましょう。\n",
-        "\n",
-        "エッジ強調は輝度成分に対して行うことが多いので、まずRGB画像から輝度成分を分離しましょう。\n",
-        "輝度と色の成分を含む色空間としては、カメラやJPEGでは通常YCbCr空間が使われます。今回もYCbCrを使ってみましょう。\n",
-        "YCbCrというのは輝度信号(Y)と２つの色差信号(Cb, Cr)でフルカラーを表す方式です。\n",
-        "\n",
-        "sRGBからJPEGで使われるYCbCr空間への変換マトリクスはこのようになっています。\n",
-        "\n",
-        "$$\n",
-        "\\left(\n",
-        "\\begin{array}{rrr}\n",
-        "0.299 &0.587 &0.144 \\\\\\\n",
-        "-0.168736 &-0.331264 &0.5 \\\\\\ \n",
-        "0.5 &-0.418688 &-0.081312\\\\\\\n",
-        "\\end{array}\n",
-        "\\right)\n",
-        "$$\n",
-        "\n",
-        "この他に通常CbとCr信号には+0.5のオフセットがのりますが、今回は省きました。\n",
         "\n",
         "ではRGB信号をYCbCrに分解してみます。"
       ]
@@ -300,7 +262,7 @@
         "plt.title('輝度信号')\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -378,7 +340,7 @@
         "plt.title('ガウンシアンフィルター処理後')\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -454,7 +416,7 @@
         "plt.title('アンシャープマスク後(輝度)')\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -538,7 +500,7 @@
         "plt.title('アンシャープマスク後（カラー）')\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -711,7 +673,7 @@
         "plt.title(u\"エッジ強調、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -734,7 +696,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "うまく処理できているようです。"
+        "うまく処理できているようです。\n",
+        "\n",
+        "このメソッドは`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。"
       ]
     },
     {
@@ -747,8 +711,7 @@
         "### まとめ\n",
         "\n",
         "今回は古典的なアンシャープマスキングによるエッジ強調を行いました。\n",
-        "昔から知られている処理ですが、現代のエッジ強調アルゴリズムにも通じる部分の多い重要なアルゴリズムです。\n",
-        "\n",
+        "  \n",
         "次は[トーンカーブ補正](http://bit.ly/raw_chap_5_4)をあつかいます。"
       ]
     }
