--- a/camera_raw_chapter_5_4.ipynb
+++ b/camera_raw_chapter_5_4.ipynb
@@ -35,9 +35,9 @@
         "\n",
         "この節ではトーンカーブ補正について解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
+        "このページ内の解説は簡略版です。 詳しい解説については技術書典6で配布した書籍「ゼロから作るRAW現像」を参照下さい。\n",
         "\n",
-        "[http://bit.ly/raw\\_chap\\_5\\_4](http://bit.ly/raw_chap_5_4)"
+        "[目次ページに戻る](http://bit.ly/raw_toc)"
       ]
     },
     {
@@ -181,7 +181,7 @@
         "plt.title(u\"前回までの画像、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -232,7 +232,7 @@
         "plt.ylabel(u\"頻度\")\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -256,10 +256,6 @@
       "cell_type": "markdown",
       "source": [
         "特におかしなところはありませんが、全体に中央に集まっていて、せっかくの256階調のダイナミックレンジを十分には使い切っていないことがわかります。\n",
-        "\n",
-        "このような画像のダイナミックレンジ拡張方法としてヒストグラム平坦化というものがあります。これは、ヒストグラムの積算値と同じ形をした関数を元の画像に適用することでヒストグラムを平坦にしてしまう、というものです。しかし、ヒストグラムを完全に平坦にしてしまうと大概は不自然な画像になってしまいます。ここでは、そこまで極端でない補正をかけたいところです。\n",
-        "\n",
-        "実際のカメラの中では非常に複雑なアルゴリズムでトーンカーブ補正を計算しますが、その部分は今回の記事では対象ではありませんので、適当にちょうど良さそうな関数を設定してトーンカーブ補正の画像処理の部分だけ行ってみましょう。\n",
         "\n",
         "先程のヒストグラムをみると中央部分が高いので、この部分をバラけさせるために、0.5付近で急になる関数をかけましょう。まず適当なアンカーポイントを設定します。"
       ]
@@ -307,7 +303,7 @@
         "plt.ylabel(u\"出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -381,7 +377,7 @@
         "plt.ylabel(u\"出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -429,7 +425,7 @@
         "plt.ylabel(u\"頻度\")\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -512,7 +508,7 @@
         "plt.title('トーンカーブ補正後')\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -637,7 +633,7 @@
         "plt.title(u\"トーンカーブ補正\")\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -670,20 +666,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "この`tone_curve_correction()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
-        "使用する場合は、\n",
-        "\n",
-        "```\n",
-        "! wget http://bit.ly/raw_process -O raw_process.py\n",
-        "```\n",
-        "\n",
-        "としてダウンロードした後、\n",
-        "\n",
-        "```\n",
-        "from raw_process import tone_curve_correction\n",
-        "```\n",
-        "\n",
-        "としてインポートしてください。"
+        "この`tone_curve_correction()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。"
       ]
     },
     {
@@ -695,8 +678,7 @@
       "source": [
         "### まとめ\n",
         "\n",
-        "今回はトーンカーブ補正を行いました。ここではトーンカーブを手動で設定しましたが、カメラの中では画像の内容や状況に応じて自動的に最適なトーンカーブを設定します。この本の範囲を超えるのであつかいませんが、こういったアルゴリズムもそれ自体かなり重要な処理です。\n",
-        "またここで扱ったものは画像全体に一律のトーンカーブを使いますがこういったものはグローバル・トーンカーブ補正と呼ばれます。さらに高度な処理では画像内の領域ごとにコントラストの調整を行ったりします。興味がある方は論文など参照されてはどうでしょうか？\n",
+        "今回はトーンカーブ補正を行いました。\n",
         "\n",
         "これで画質を良くする処理の章は終わりです。次は[応用編](http://bit.ly/raw_chap_6_1)に入ります。"
       ]
